# Autogpt

.github/workflows/: platform-frontend-ci.yml
autogpt_platform/autogpt_libs/: pyproject.toml
autogpt_platform/backend/: pyproject.toml
autogpt_platform/frontend/: package.json  pnpm-lock.yaml
