[tool.poetry]
name = "autogpt-libs"
version = "0.2.0"
description = "Shared libraries across AutoGPT Platform"
authors = ["AutoGPT team <info@agpt.co>"]
readme = "README.md"
packages = [{ include = "autogpt_libs" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
colorama = "^0.4.6"
expiringdict = "^1.2.2"
fastapi = "^0.118.0"
google-cloud-logging = "^3.12.1"
launchdarkly-server-sdk = "^9.12.1"
pydantic = "^2.11.10"
pydantic-settings = "^2.11.0"
pyjwt = "^2.10.1"
pytest-asyncio = "^1.2.0"
pytest-mock = "^3.15.1"
redis = "^6.4.0"
supabase = "^2.21.1"
uvicorn = "^0.37.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]  # sort dependencies
